[package]
name = "nghttp2"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-net-web/nghttp2"
documentation = "https://docs.rs/nghttp2"
description = "High-level Nghttp2 API."
keywords = ["http2", "h2", "parser", "duplex", "connection"]
categories = ["asynchronous", "network-programming", "web-programming", "web-programming::http-client", "web-programming::http-server"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.3"
libnghttp2-sys = "0.1.1"
openssl = "0.10.16"
bitflags = "1.0.4"

[dev-dependencies]
